@@ -1,6 +1,13 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+#' Lookup the integer values used to represent different label types
+#'
+#' @return Integer vector with names corresponding to supported label types
+get_label_code <- function() {
+    .Call(`_FLOPART_get_label_code`)
+}
+
 #' Interface to FLOPART C++ code
 #'
 #' @param data_vec Integer vector of non-negative count data
