@@ -5,6 +5,16 @@
 
 using namespace Rcpp;
 
+// get_label_code
+Rcpp::IntegerVector get_label_code();
+RcppExport SEXP _FLOPART_get_label_code() {
+BEGIN_RCPP
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    rcpp_result_gen = Rcpp::wrap(get_label_code());
+    return rcpp_result_gen;
+END_RCPP
+}
 // FLOPART_interface
 Rcpp::List FLOPART_interface(const Rcpp::IntegerVector data_vec, const Rcpp::NumericVector weight_vec, const double penalty, const Rcpp::IntegerVector label_type_vec, const Rcpp::IntegerVector label_start_vec, const Rcpp::IntegerVector label_end_vec);
 RcppExport SEXP _FLOPART_FLOPART_interface(SEXP data_vecSEXP, SEXP weight_vecSEXP, SEXP penaltySEXP, SEXP label_type_vecSEXP, SEXP label_start_vecSEXP, SEXP label_end_vecSEXP) {
@@ -23,6 +33,7 @@ END_RCPP
 }
 
 static const R_CallMethodDef CallEntries[] = {
+    {"_FLOPART_get_label_code", (DL_FUNC) &_FLOPART_get_label_code, 0},
     {"_FLOPART_FLOPART_interface", (DL_FUNC) &_FLOPART_FLOPART_interface, 6},
     {NULL, NULL, 0}
 };
